// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`[[id]] > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div class="column centerAll noMediaMessage">
    <phvinylrecord size="50"></phvinylrecord>
    <p>No album found.</p>
  </div>
</div>"
`;

exports[`[[id]] > when getAlbum does return data > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div>
    <div class="entryHeader">
      <div class="centerAll preloadImage backgroundImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      <div class="blur"></div>
    </div>
    <section class="mBXL content">
      <figure class="figure" draggable="true">
        <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </figure>
      <div class="mBAllM detailsWrapper">
        <div class="centerItems spaceBetween">
          <h1>album-0</h1>
          <div class="centerItems"></div>
        </div>
        <artists-list-stub artists="[object Object],[object Object]"></artists-list-stub>
        <genre-list-stub genres="[object Object],[object Object]"></genre-list-stub>
        <ul class="bulletList">
          <li><span class="visuallyHidden">Year: </span> 2024</li>
          <li><span class="strong">4</span> Tracks</li>
          <li><span class="strong">1</span> Disc</li>
          <li><span class="visuallyHidden">Duration: </span><time>03:25:45</time></li>
          <li><span class="visuallyHidden">Size: </span> 0.02 KB</li>
        </ul>
        <div class="list"><button class="centerItems buttonLink largeThemeHoverButton largeThemeHoverButton" draggable="false" type="button" id="play-all-button" title="Play tracks">
            <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play tracks </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" id="shuffle-all-button" title="Shuffle tracks">
            <phshuffle aria-hidden="true" class="icon" size="24" weight="regular"></phshuffle><span class="clamp text visuallyHidden"> Shuffle tracks </span>
          </button>
          <favourite-button-stub id="album-0" type="album" favourite="true"></favourite-button-stub>
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
              <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
            </button>
            <div class="dropdown fade-enter-from fade-enter-active">
              <ul>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Add to queue </span>
                  </button></li>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Play Tracks </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
    <!--v-if-->
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
  </div>
</div>"
`;

exports[`[[id]] > when getAlbum does return data > when album.genres is an empty array > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div>
    <div class="entryHeader">
      <div class="centerAll preloadImage backgroundImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      <div class="blur"></div>
    </div>
    <section class="mBXL content">
      <figure class="figure" draggable="true">
        <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </figure>
      <div class="mBAllM detailsWrapper">
        <div class="centerItems spaceBetween">
          <h1>album-0</h1>
          <div class="centerItems"></div>
        </div>
        <artists-list-stub artists="[object Object],[object Object]"></artists-list-stub>
        <!--v-if-->
        <ul class="bulletList">
          <li><span class="visuallyHidden">Year: </span> 2024</li>
          <li><span class="strong">4</span> Tracks</li>
          <li><span class="strong">1</span> Disc</li>
          <li><span class="visuallyHidden">Duration: </span><time>03:25:45</time></li>
          <li><span class="visuallyHidden">Size: </span> 0.02 KB</li>
        </ul>
        <div class="list"><button class="centerItems buttonLink largeThemeHoverButton largeThemeHoverButton" draggable="false" type="button" id="play-all-button" title="Play tracks">
            <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play tracks </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" id="shuffle-all-button" title="Shuffle tracks">
            <phshuffle aria-hidden="true" class="icon" size="24" weight="regular"></phshuffle><span class="clamp text visuallyHidden"> Shuffle tracks </span>
          </button>
          <favourite-button-stub id="album-0" type="album" favourite="true"></favourite-button-stub>
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
              <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
            </button>
            <div class="dropdown fade-enter-from fade-enter-active">
              <ul>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Add to queue </span>
                  </button></li>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Play Tracks </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
    <!--v-if-->
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
  </div>
</div>"
`;

exports[`[[id]] > when getAlbum does return data > when album.totalDiscNumber is greater than 1 > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div>
    <div class="entryHeader">
      <div class="centerAll preloadImage backgroundImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      <div class="blur"></div>
    </div>
    <section class="mBXL content">
      <figure class="figure" draggable="true">
        <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </figure>
      <div class="mBAllM detailsWrapper">
        <div class="centerItems spaceBetween">
          <h1>album-0</h1>
          <div class="centerItems"></div>
        </div>
        <artists-list-stub artists="[object Object],[object Object]"></artists-list-stub>
        <genre-list-stub genres="[object Object],[object Object]"></genre-list-stub>
        <ul class="bulletList">
          <li><span class="visuallyHidden">Year: </span> 2024</li>
          <li><span class="strong">4</span> Tracks</li>
          <li><span class="strong">5</span> Discs</li>
          <li><span class="visuallyHidden">Duration: </span><time>03:25:45</time></li>
          <li><span class="visuallyHidden">Size: </span> 0.02 KB</li>
        </ul>
        <div class="list"><button class="centerItems buttonLink largeThemeHoverButton largeThemeHoverButton" draggable="false" type="button" id="play-all-button" title="Play tracks">
            <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play tracks </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" id="shuffle-all-button" title="Shuffle tracks">
            <phshuffle aria-hidden="true" class="icon" size="24" weight="regular"></phshuffle><span class="clamp text visuallyHidden"> Shuffle tracks </span>
          </button>
          <favourite-button-stub id="album-0" type="album" favourite="true"></favourite-button-stub>
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
              <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
            </button>
            <div class="dropdown fade-enter-from fade-enter-active">
              <ul>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Add to queue </span>
                  </button></li>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Play Tracks </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
    <h3 data-test-id="disc-number-title">1</h3>
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
    <h3 data-test-id="disc-number-title">2</h3>
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
    <h3 data-test-id="disc-number-title">3</h3>
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
    <h3 data-test-id="disc-number-title">4</h3>
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
    <h3 data-test-id="disc-number-title">5</h3>
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
  </div>
</div>"
`;

exports[`[[id]] > when getAlbum does return data > when album.trackCount is 1 > matches the snapshot 1`] = `
"<div class="column centerAll loadingData" style="display: none;"><span class="mainLoader"><span class="headphones"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" viewBox="0 0 24 24" width="75" xmlns="http://www.w3.org/2000/svg"><path d="M4 13.5V13c0-4.97 3.582-9 8-9s8 4.03 8 9v.5"></path><path d="M2 17.439v-1.877a2 2 0 0 1 1.515-1.94L4 13.5l1.254-.314a.6.6 0 0 1 .746.582v5.464a.6.6 0 0 1-.746.582l-1.74-.435A2 2 0 0 1 2 17.439ZM22 17.439v-1.877a2 2 0 0 0-1.515-1.94L20 13.5l-1.255-.314a.6.6 0 0 0-.745.582v5.464a.6.6 0 0 0 .745.582l1.74-.435A2 2 0 0 0 22 17.439Z"></path></svg></span><span class="centerItems loader"><span class="bar"></span><span class="bar"></span><span class="bar"></span><span class="bar"></span></span><span class="visuallyHidden">Loading data</span></span></div>
<div class="mainContent">
  <div>
    <div class="entryHeader">
      <div class="centerAll preloadImage backgroundImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      <div class="blur"></div>
    </div>
    <section class="mBXL content">
      <figure class="figure" draggable="true">
        <div class="centerAll preloadImage preloadImage" data-test-id="image"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="album-0" class="image" draggable="false" loading="lazy" src="image"></div>
      </figure>
      <div class="mBAllM detailsWrapper">
        <div class="centerItems spaceBetween">
          <h1>album-0</h1>
          <div class="centerItems"></div>
        </div>
        <artists-list-stub artists="[object Object],[object Object]"></artists-list-stub>
        <genre-list-stub genres="[object Object],[object Object]"></genre-list-stub>
        <ul class="bulletList">
          <li><span class="visuallyHidden">Year: </span> 2024</li>
          <li><span class="strong">1</span> Track</li>
          <li><span class="strong">1</span> Disc</li>
          <li><span class="visuallyHidden">Duration: </span><time>03:25:45</time></li>
          <li><span class="visuallyHidden">Size: </span> 0.02 KB</li>
        </ul>
        <div class="list"><button class="centerItems buttonLink largeThemeHoverButton largeThemeHoverButton" draggable="false" type="button" id="play-all-button" title="Play tracks">
            <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play tracks </span>
          </button><button class="centerItems buttonLink" draggable="false" type="button" id="shuffle-all-button" title="Shuffle tracks">
            <phshuffle aria-hidden="true" class="icon" size="24" weight="regular"></phshuffle><span class="clamp text visuallyHidden"> Shuffle tracks </span>
          </button>
          <favourite-button-stub id="album-0" type="album" favourite="true"></favourite-button-stub>
          <div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
              <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
            </button>
            <div class="dropdown fade-enter-from fade-enter-active">
              <ul>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Add to queue </span>
                  </button></li>
                <li class="dropdownItem"><button class="centerItems buttonLink centerAll fullWidth spaceBetween buttonLink spaceBetween buttonLink" draggable="false" type="button">
                    <!--v-if--><span class="clamp text"> Play Tracks </span>
                  </button></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </section>
    <!--v-if-->
    <album-tracks-list-stub tracks="[object Object]"></album-tracks-list-stub>
  </div>
</div>"
`;
